Add initial support for searching and rendering

--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,7 @@
     <section class="results">
       <ul>
         <li class="result">
-          <p>Resultat</p>
-        </li>
-        <li class="result">
-          <p>Resultat</p>
-        </li>
-        <li class="result">
-            <p>Resultat</p>
-        </li>
-        <li class="result">
-            <p>Resultat</p>
+          <p>No results found. Try and search again!</p>
         </li>
       </ul>
     </section>
