--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mashed</title>
 </head>
+<!-- klassen mashed längst ner i app.js-->
 <body id="mashed">
   <header class="header">
     <h1>Mashed</h1>
